Fix spacing on bill

--- a/src/components/bill/DragAndDrop.scss
+++ b/src/components/bill/DragAndDrop.scss
@@ -1,10 +1,18 @@
-@import "../../base";
+@import '../../base';
 .dragAndDropContainer {
+  margin-top: -10px;
   width: 100%;
   height: 320px;
   color: $base-white;
-  white-space: nowrap;
-  display: inline-block;
+  // white-space: nowrap;
+  // display: inline-block;
+  p {
+    text-align: left;
+    margin-left: 5%;
+  }
+  h1 {
+    margin: 0;
+  }
 }
 .drag-item {
   height: 30px;
@@ -15,8 +23,12 @@
 }
 .droppable-container {
   background-color: $base-dark;
-  margin: 2%;
+  margin: 2% 2% 0 2%;
 }
 .seat-heading {
   font-size: 1.5em;
+}
+
+ul {
+  list-style-type: none;
 }
